🐞 fix issue with wrong scroll overflow using flexbox in the center toolbar for node types

--- a/hcu-urban-model-builder-client/app/styles/app.scss
+++ b/hcu-urban-model-builder-client/app/styles/app.scss
@@ -25,15 +25,15 @@ $node-color-map: (
   "agent":
     rgba(
       $color: #574f7e,
-      $alpha: 0.2,
+      $alpha: 0.2
     ),
-  "folder": #8f8d8d71,
+  "folder": #8f8d8d71
 );
 
 $edge-color-map: (
   "flow": map.get($node-color-map, "flow"),
   "transition": #030303,
-  "agent-population": #aba3d2,
+  "agent-population": #aba3d2
 );
 
 @import "./react-canvas";
@@ -123,6 +123,7 @@ main {
   display: flex;
   align-items: center;
   gap: get-spacer(3);
+  overflow: auto;
 }
 
 .node-toolbar__node {
@@ -559,7 +560,7 @@ fieldset {
 .react-wrapper .react-flow__panel.center {
   margin-left: 140px;
   margin-right: 140px;
-  overflow: auto;
+  // overflow: auto;
   width: calc(100% - 280px);
   display: flex;
   justify-content: center;
